@@ -1,1 +1,1 @@
-Spanish or Portuguese
+Spanish
