@@ -1,22 +1,6 @@
 [
-            // See: https://en.wikipedia.org/wiki/French_orthography
-            // Àà, Ââ, Ææ
-            // Çç
-            // Éé, Èè, Êê, Ëë
-            // Îî, Ïï
-            // Ôô, Œœ
-            // Ùù, Ûû, Üü
-            // Ÿÿ
-            // ⟨¿⟩ and ⟨¡⟩  
-            // ⟨ñ⟩, Ñ
-            // ⟨á⟩, ⟨é⟩, ⟨í⟩, ⟨ó⟩, ⟨ú⟩
-
-            // https://en.wikipedia.org/wiki/Portuguese_orthography
-            // Portuguese makes use of five diacritics: the cedilla (ç), acute accent (á, é, í, ó, ú), circumflex accent (â, ê, ô), tilde (ã, õ), and grave accent (à, and rarely è, ì, ò, and ù).
-			["&?", "¿"],
-			["&!", "¡"],
-			["&Nn", "Ñ"],
-			["&nn", "ñ"],
+    // https://en.wikipedia.org/wiki/Spanish_orthography
+    //   ⟨á⟩, ⟨é⟩, ⟨í⟩, ⟨ó⟩, ⟨ú⟩, ⟨ñ⟩, ⟨Ñ⟩, ⟨ü⟩, ⟨Ü⟩, ⟨¿⟩, and ⟨¡⟩.
             ["&A'", "Á"],
 			["&a'", "á"],
 			["&E'", "É"], 
@@ -27,39 +11,10 @@
 			["&o'", "ó"],
 			["&U'", "Ú"],
 			["&u'", "ú"], 
+			["&Nn", "Ñ"],
+			["&nn", "ñ"],
 			["&U:", "Ü"],
 			["&u:", "ü"],
-			["&Y:", "Ÿ"],
-			["&y:", "ÿ"],
-            ["&-.", "·"],
-            ["&An", "ã"],
-            ["&an", "Ã"],
-            ["&En", "Ẽ"],
-            ["&en", "ẽ"],
-            ["&in", "ĩ"],
-            ["&In", "Ĩ"],
-            ["&On", "Õ"],
-            ["&on", "õ"],
-            ["&Un", "Ũ"],
-            ["&un", "ũ"],
-            ["&'A", "À"],
-            ["&'a", "à"],
-            ["&'E", "È"],
-            ["&'e", "è"],
-            ["&'I", "Ì"],
-            ["&'i", "ì"],
-            ["&'O", "Ò"],
-            ["&'o", "ò"],
-            ["&U^", "Û"],
-            ["&u^", "û"],
-            ["&A^", "Â"],
-            ["&a^", "â"],
-            ["&E^", "Ê"],
-            ["&e^", "ê"],
-            ["&I^", "Î"],
-            ["&i^", "î"],
-            ["&O^", "Ô"],
-            ["&o^", "ô"],
-            ["&U^", "Û"],
-            ["&u^", "û"],
+			["&?", "¿"],
+			["&!", "¡"],
 			];
