@@ -46,3 +46,6 @@ At the same time the following orthographies have been added: French, Spanish or
 2021-03-03 no change in version number
 - Refactor code for generating web pages.
 - New feature: generate an index page with links to generated web applications.
+
+2021-03-03 no change in version number
+- Separate Spanish and Portuguese instead of existing on a single page.
